@@ -8,7 +8,5 @@
    spin_component="DOWN"
    
  /
-G
-0.0 0.0 0.0
-Z
-0.0 0.0 0.5
+G    0.0 0.0 0.0
+Z    0.0 0.0 0.5
